# FFmpegVideoPlayer

./: .gitignore  CMakeLists.txt
Sources/: main.cpp
Sources/PacketsQueue/: packetsQueue.cpp  packetsQueue.hpp
Sources/SDLRenderer/: SDLRenderer.cpp  SDLRenderer.hpp
Sources/Utils/: utils.cpp  utils.hpp
Sources/VideoFramesReader/: videoFramesReader.cpp  videoFramesReader.hpp
